# bustub-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/binder/: Cargo.toml
crates/binder/src/: binder.rs  bound_table_ref.rs  context_guard.rs  lib.rs  order_by.rs  parse_node_error.rs  postgres_parser.rs  try_from_ast_error.rs
crates/binder/src/binder/: binder.rs  context.rs  context_guard.rs  mod.rs
crates/binder/src/expressions/: alias.rs  column_ref.rs  constant.rs  expression_type.rs  mod.rs  star_expr.rs  traits.rs
crates/binder/src/pg_query_helpers/: column_def.rs  constraints.rs  list.rs  mod.rs  node.rs
crates/binder/src/sql_parser_helper/: column_def.rs  constraints.rs  list.rs  mod.rs  node.rs  select_ext.rs  select_item_ext.rs
crates/binder/src/statements/: create.rs  create_statement.rs  delete.rs  insert.rs  insert_statement.rs  mod.rs  parse_returning.rs  select_statement.rs  statement_type.rs  traits.rs
crates/binder/src/table_ref/: base_table_ref.rs  bound_subquery_ref.rs  cross_product_ref.rs  cte_ref.rs  expression_list_ref.rs  join_ref.rs  mod.rs  subquery_ref.rs  table_reference_type.rs  traits.rs
crates/buffer/: Cargo.toml
crates/buffer/common/: Cargo.toml
crates/buffer/common/src/: lib.rs
crates/buffer/eviction_policy/: Cargo.toml
crates/buffer/eviction_policy/src/: eviction_policies_types.rs  lib.rs  traits.rs
crates/buffer/manager/: Cargo.toml
crates/buffer/manager/src/: builder.rs  errors.rs  lib.rs  manager.rs  manager_stats.rs  tests.rs  traits.rs
crates/buffer/src/: lib.rs
crates/buffer/src/buffer_pool_manager/: manager.rs  manager_impl.rs  mod.rs  tests.rs
crates/buffer/src/lru_k_replacer/: counter.rs  lru_k_node.rs  lru_k_replacer.rs  lru_k_replacer_impl.rs  mod.rs  tests.rs
crates/bustub_instance/: Cargo.toml
crates/bustub_instance/src/: lib.rs  rows.rs
crates/bustub_instance/src/instance/: bustub_instance.rs  cmd.rs  db_output.rs  mod.rs
crates/bustub_instance/src/mocks/: mod.rs
crates/bustub_instance/src/result_writer/: comfy_table_writer.rs  html_writer.rs  mod.rs  noop_writer.rs  simple_stream_writer.rs  sqltest_writer.rs  string_vector_writer.rs  traits.rs
crates/bustub_instance/src/table_generator/: column_insert_meta.rs  constants.rs  dist.rs  generate_values.rs  generator.rs  mod.rs  table_insert_meta.rs
crates/bustub_instance/src/tests/: create_table.rs  delete.rs  drop_table.rs  insert.rs  mod.rs  selection.rs
crates/catalog/schema_mocks/: Cargo.toml
crates/catalog/schema_mocks/src/: constants.rs  lib.rs  mock_data_iterator.rs  table_name.rs
crates/concurrency/transaction/core/: Cargo.toml
crates/db_core/: Cargo.toml
crates/db_core/src/: lib.rs
crates/db_core/src/buffer/: mod.rs
crates/db_core/src/catalog/: catalog.rs  column.rs  index_info.rs  index_type.rs  mod.rs  schema.rs  table_info.rs
crates/db_core/src/concurrency/: mod.rs
crates/db_core/src/container/: mod.rs
crates/db_core/src/storage/: mod.rs
crates/execution/engine/: Cargo.toml
crates/execution/engine/src/: context.rs  engine.rs  lib.rs
crates/hashing/extendible_hash_table/: Cargo.toml
crates/hashing/extendible_hash_table/src/: directory_page.rs  header_page.rs  lib.rs  pages_tests.rs
crates/mut_binary_heap_index_keys/: Cargo.toml  README.md
crates/mut_binary_heap_index_keys/benches/: binary_heap.rs
crates/mut_binary_heap_index_keys/examples/: dijkstra.rs
crates/mut_binary_heap_index_keys/src/: binary_heap.rs  lib.rs
crates/planner/: Cargo.toml
crates/planner/src/: constants.rs  lib.rs  traits.rs
crates/planner/src/expressions/: agg_call_expr.rs  alias.rs  binary_op.rs  column_ref.rs  constant.rs  expr_impl.rs  func_call_expr.rs  mod.rs  order_by.rs  star_expr.rs  traits.rs  unary_op_expr.rs  window_expr.rs
crates/planner/src/plan_nodes/: delete_plan.rs  filter_plan.rs  filter_plan_node.rs  hash_join_plan.rs  index_scan_plan_node.rs  insert_plan.rs  limit_plan_node.rs  mock_scan_plan_node.rs  mod.rs  nested_index_join_plan.rs  nested_loop_join_plan_node.rs  plan_type.rs  projection_plan_node.rs  seq_scan_plan_node.rs  sort_plan_node.rs  top_n_per_group_plan_node.rs  top_n_plan_node.rs  traits.rs  update_plan.rs  values_plan.rs
crates/planner/src/planner/: context.rs  context_guard.rs  mod.rs  planner.rs
crates/planner/src/plans/: abstract_plan_node.rs  mod.rs  select.rs
crates/planner/src/statements/: delete_plan.rs  mod.rs  statement_type.rs  traits.rs
crates/planner/src/table_ref/: base_table_ref.rs  cross_product_ref.rs  cte_ref.rs  expression_list_ref.rs  join_ref.rs  mod.rs  subquery_ref.rs  table_ref_impl.rs
crates/storage/: Cargo.toml
crates/storage/disk/: Cargo.toml
crates/storage/disk/src/: lib.rs
crates/storage/index/: Cargo.toml
crates/storage/index/src/: generic_comparator.rs  generic_key.rs  index_metadata.rs  index_with_metadata.rs  lib.rs  traits.rs
crates/storage/pages/: Cargo.toml
crates/storage/pages/src/: align_to_page_data.rs  lib.rs  page.rs  types.rs  underlying_page.rs
crates/storage/src/: lib.rs
crates/storage/src/buffer/: mod.rs
crates/storage/src/catalog/: column.rs  mod.rs  schema.rs
crates/storage/src/disk/: mod.rs
crates/storage/src/page/: mod.rs  page.rs  strong_page.rs  underlying_page.rs  weak_page.rs
crates/storage/src/recovery/: mod.rs
crates/storage/src/storage/: mod.rs
crates/storage/table/core/: Cargo.toml
crates/storage/table/tuple/: Cargo.toml
crates/utils/generics/: Cargo.toml
crates/utils/generics/src/: lib.rs  shuffle.rs
tools/bpm_bench/: Cargo.toml  README.md
tools/bpm_bench/src/: cli.rs  main.rs  page_process.rs
tools/bpm_bench/src/metrics/: bpm_metrics.rs  (+2 more)
tools/hash_table_bench/: Cargo.toml
tools/hash_table_bench/src/: cli.rs  main.rs
tools/shell/: Cargo.toml
tools/shell/src/: cli.rs  main.rs
tools/sql_logic_test/: Cargo.toml
tools/sql_logic_test/test_files/: insert.slt
tools/sqllogictest/: Cargo.toml
tools/sqllogictest/src/: lib.rs  test_context.rs
tools/sqllogictest/test_files/: insert.slt
tools/wasm-shell/: Cargo.toml  README.md  index.html
tools/wasm-shell/src/: lib.rs
(+675 files in other folders)
