[workspace]
members = [
    "crates/playground",
    "tools/shell",
    "tools/hash_table_bench",
    "tools/bpm_bench",
    "crates/common",
    "crates/primer",
    "crates/db_core",
    "crates/utils/stats",
    "crates/data_types",
    "crates/utils/binary_utils",
    "crates/utils/generics",
    "crates/utils/error_utils",
    "crates/data_structures",
    "crates/rid",
    "crates/storage/pages",
    "crates/storage/disk",
    "crates/recovery/log_manager",
    "crates/buffer/eviction_policy",
    "crates/buffer/common",
    "crates/buffer/manager",
    "crates/concurrency/transaction/core",
    "crates/execution/expression",
    "crates/storage/table/tuple",
    "crates/hashing/common",
    "crates/hashing/extendible_hash_table",
    "crates/bustub_instance",
    "crates/recovery/checkpoint_manager",
    "crates/execution/engine",
    "crates/execution/common",
    "crates/binder",
    "crates/catalog/schema", "crates/concurrency/lock_manager", "crates/storage/index",
]

[profile.bench]
debug = true
