[package]
name = "binder"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12.3"

db_core = {path = "../db_core" }
common = {path = "../common"}
data_types = {path = "../data_types"}
error_utils = {path = "../utils/error_utils"}
catalog_schema = {path = "../catalog/schema" }
anyhow = "1.0.89"
thiserror = "1.0.64"

sqlparser = "0.51.0"

[package.metadata.cargo-machete]
ignored = ["anyhow"]
