[package]
name = "binder"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = { workspace = true }

db_core = { workspace = true}
common = {workspace = true}
data_types = {workspace = true}
error_utils = {workspace = true}
catalog_schema = {workspace = true }
anyhow = {workspace = true}
thiserror = {workspace = true}

sqlparser = {workspace = true}
