[package]
name = "buffer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
storage = {path = "../storage"}
recovery = {path = "../recovery"}

# TODO - remove unused features
chrono = "0.4.38"
rand = "0.8"
parking_lot = "0.12.3"
derive_builder = "0.20.0"
log = "0.4.22"

# Profiling
tracy-client = { version = "0.17.3", default-features = false, features = ["enable"] }

[dev-dependencies]
tempdir = "0.3.7"
zipf = "7"
