[package]
name = "buffer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
concurrency_shared = { path = "../concurrency_shared" }
storage = {path = "../storage"}
recovery = {path = "../recovery"}
stats = {path = "../stats"}

# TODO - remove unused features
chrono = "0.4.38"
rand = "0.8"
parking_lot = "0.12.3"
derive_builder = "0.20.0"
log = "0.4.22"
num-format = "0.4.4"
mut-binary-heap = "0.1.0"

# Profiling
tracy-client = { version = "0.17.3", default-features = false, features = [
#    "enable"
] }

[dev-dependencies]
tempdir = "0.3.7"
zipf = "7"
shuttle = "0.7.1"
loom = "0.7.2"


[features]
test_concurrency = ["storage/test_concurrency", "common/test_concurrency", "concurrency_shared/test_concurrency"]
