[package]
name = "bustub_instance"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
parking_lot = "0.12.3"
rand = "0.8"
zipf = "7"

# Profiling
tracy-client = { version = "0.17.3", default-features = false }

db_core = {path = "../db_core" }
common = {path = "../common"}
pages = {path = "../storage/pages"}
disk_storage = {path = "../storage/disk"}
buffer_common = {path = "../buffer/common"}
buffer_pool_manager = {path = "../buffer/manager"}
recovery_log_manager = {path = "../recovery/log_manager"}
checkpoint_manager = {path = "../recovery/checkpoint_manager"}
execution_common = {path = "../execution/common"}
execution_engine = {path = "../execution/engine"}
data_types = {path = "../data_types"}
transaction = {path = "../concurrency/transaction/core"}
error_utils = {path = "../utils/error_utils"}
anyhow = "1.0.89"



extendible_hash_table = {path = "../hashing/extendible_hash_table"}
hashing_common = {path = "../hashing/common"}
rid = {path = "../rid"}

strum = "0.26.3"
strum_macros = "0.26.3"

comfy-table = "7.1.1"

[profile.bench]
debug = true

[features]
default = ["checkpoint_manager"]
checkpoint_manager = []
lock_manager = []

statistics = ["buffer_pool_manager/statistics", "extendible_hash_table/statistics"]
tracing = ["tracy-client/enable", "extendible_hash_table/tracing", "buffer_pool_manager/tracing"]
tracing-memory-allocation = ["tracing"]
