[package]
name = "bustub_instance"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12.3"

db_core = {path = "../db_core" }
common = {path = "../common"}
disk_storage = {path = "../storage/disk"}
buffer_pool_manager = {path = "../buffer/manager"}
recovery_log_manager = {path = "../recovery/log_manager"}
checkpoint_manager = {path = "../recovery/checkpoint_manager"}
execution_common = {path = "../execution/common"}
execution_engine = {path = "../execution/engine"}
planner = {path = "../planner"}
data_types = {path = "../data_types"}
lock_manager = {path = "../concurrency/lock_manager"}
transaction = {path = "../concurrency/transaction/core"}
index = {path = "../storage/index"}
error_utils = {path = "../utils/error_utils"}
anyhow = "1.0.89"

catalog_schema = {path = "../catalog/schema" }
catalog_schema_mocks = {path = "../catalog/schema_mocks" }

binder = {path = "../binder"}

comfy-table = "7.1.1"


# Profiling
tracy-client = { version = "0.17.3", default-features = false }

[package.metadata.cargo-machete]
ignored = ["anyhow"]

[profile.bench]
debug = true

[features]
default = ["checkpoint_manager"]
checkpoint_manager = []
lock_manager = ["db_core/lock_manager"]

statistics = ["buffer_pool_manager/statistics"]
tracing = ["tracy-client/enable", "buffer_pool_manager/tracing"]
tracing-memory-allocation = ["tracing"]
