[package]
name = "bustub_instance"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = { workspace = true }

db_core = { workspace = true }
common = { workspace = true }
disk_storage = { workspace = true }
buffer_pool_manager = { workspace = true }
recovery_log_manager = { workspace = true }
checkpoint_manager = { workspace = true }
execution_common = { workspace = true }
execution_engine = { workspace = true }
planner = { workspace = true }
data_types = { workspace = true }
lock_manager = { workspace = true }
transaction = { workspace = true }
index = { workspace = true }
error_utils = { workspace = true }
anyhow = { workspace = true }
tuple = { workspace = true }

catalog_schema = { workspace = true }
catalog_schema_mocks = { workspace = true }

binder = { workspace = true }

comfy-table = { workspace = true }


# Profiling
tracy-client = { workspace = true }
rand = { workspace = true }

[features]
default = ["checkpoint_manager"]
checkpoint_manager = []
lock_manager = ["db_core/lock_manager"]

statistics = ["buffer_pool_manager/statistics"]
tracing = ["tracy-client/enable", "buffer_pool_manager/tracing"]
tracing-memory-allocation = ["tracing"]

wasm = ["catalog_schema_mocks/wasm"]
