[package]
name = "db_core"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
pages = {path = "../storage/pages"}

buffer_common = {path = "../buffer/common"}
buffer_pool_manager = {path = "../buffer/manager"}

recovery_log_manager = {path = "../recovery/log_manager"}
lock_manager = {path = "../concurrency/lock_manager"}
transaction = {path = "../concurrency/transaction/core"}
table = {path = "../storage/table/core"}
tuple = {path = "../storage/table/tuple"}
extendible_hash_table = {path = "../hashing/extendible_hash_table"}
hashing_common = {path = "../hashing/common"}

rid = {path = "../rid"}
data_types = {path = "../data_types"}
error_utils = {path = "../utils/error_utils"}

catalog_schema = {path = "../catalog/schema" }
index = {path = "../storage/index"}

thiserror = "1.0.64"

parking_lot = "0.12.3"

[dev-dependencies]
tempdir = "0.3.7"


[features]
default = []
