[package]
name = "db_core"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
pages = { workspace = true }
buffer_pool_manager = { workspace = true }

recovery_log_manager = { workspace = true }
lock_manager = { workspace = true }
transaction = { workspace = true }
table = { workspace = true }

rid = { workspace = true }

catalog_schema = { workspace = true }
index = { workspace = true }

error_utils = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

parking_lot = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }


[features]
default = []
checkpoint_manager = []
lock_manager = ["table/lock_manager"]
