[package]
name = "mut_binary_heap_index_keys"
version = "0.1.0"
authors = ["Burkhard Mittelbach <burkhard@mittelbach-online.de>", "Raz Luvaton"]
description = "Enhanced version of std::collections::BinaryHeap that supports increase and decrease key, max, min, and custom-order heaps."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wasabi375/mut-binary-heap"
readme = "README.md"
keywords = ["binary", "heap", "priority", "queue"]
categories = ["data-structures", "algorithms", ]
edition = "2021"
rust-version = "1.56.0"

[dependencies]
compare = "0.1.0"
identity-hash = "0.1.0"

[dev-dependencies]
rand = "0.8"
