[package]
name = "planner"
version = "0.1.0"
edition = "2021"

[dependencies]
binder = {path = "../binder"}
catalog_schema = {path = "../catalog/schema" }
common = {path = "../common"}
data_types = {path = "../data_types"}
db_core = {path = "../db_core" }
expression = {path = "../execution/expression"}
parking_lot = "0.12.3"
error_utils = {path = "../utils/error_utils"}