[package]
name = "planner"
version = "0.1.0"
edition = "2021"

[dependencies]
binder = { workspace = true }
catalog_schema = { workspace = true }
common = { workspace = true }
data_types = { workspace = true }
db_core = { workspace = true }
expression = { workspace = true }
parking_lot = { workspace = true }
error_utils = { workspace = true }
anyhow = { workspace = true }


[package.metadata.cargo-machete]
ignored = ["anyhow"]
