[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
anyhow = "1.0.86"
parking_lot = "0.12.3"
log = "0.4.22"

# Profiling
tracy-client = { version = "0.17.3", default-features = false, features = [
        "enable"
] }
[dev-dependencies]
tempdir = "0.3.7"
