[package]
name = "bpm_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
parking_lot = "0.12.3"
rand = "0.8"
zipf = "7"

# Profiling
tracy-client = { version = "0.17.3", default-features = false, features = [
        "enable"
] }

storage = {path = "../../crates/storage"}
common = {path = "../../crates/common"}

tempdir = "0.3.7"


[profile.release]
debug = true

