[package]
name = "bpm_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
parking_lot = "0.12.3"
rand = "0.8"
zipf = "7"

# Profiling
tracy-client = { version = "0.17.3", default-features = false }

db_core = {path = "../../crates/db_core" }
common = {path = "../../crates/common"}
pages = {path = "../../crates/storage/pages"}
disk_storage = {path = "../../crates/storage/disk"}
buffer_common = {path = "../../crates/buffer/common"}
buffer_pool_manager = {path = "../../crates/buffer/manager"}

tempdir = "0.3.7"

[profile.bench]
debug = true

[features]
default = []
statistics = ["buffer_pool_manager/statistics"]
tracing = ["tracy-client/enable", "buffer_pool_manager/tracing"]
tracing-memory-allocation = ["tracing"]
