[package]
name = "hash_table_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
parking_lot = "0.12.3"
rand = "0.8"

# Profiling
tracy-client = { version = "0.17.3", default-features = false }

pages = {path = "../../crates/storage/pages"}
disk_storage = {path = "../../crates/storage/disk"}
buffer_common = {path = "../../crates/buffer/common"}
buffer_pool_manager = {path = "../../crates/buffer/manager"}

extendible_hash_table = {path = "../../crates/hashing/extendible_hash_table"}
hashing_common = {path = "../../crates/hashing/common"}
rid = {path = "../../crates/rid"}
catalog_schema = {path = "../../crates/catalog/schema"}
index = {path = "../../crates/storage/index"}

[profile.bench]
debug = true

[features]
default = []
statistics = ["buffer_pool_manager/statistics", "extendible_hash_table/statistics"]
tracing = ["tracy-client/enable", "extendible_hash_table/tracing", "buffer_pool_manager/tracing"]
tracing-memory-allocation = ["tracing"]
