[package]
name = "shell"
version = "0.1.0"
edition = "2021"
default-run = "shell"

[dependencies]
bustub_instance = { path = "../../crates/bustub_instance" }
transaction = {path = "../../crates/concurrency/transaction/core"}
execution_common = {path = "../../crates/execution/common"}


clap = { version = "4.5.16", features = ["derive"] }
rustyline = "14.0.0"
parking_lot = "0.12.3"


