[package]
name = "wasm-shell"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
bustub_instance = { path = "../../crates/bustub_instance", features = ["wasm"] }
transaction = {path = "../../crates/concurrency/transaction/core"}
execution_common = {path = "../../crates/execution/common"}
console_error_panic_hook = "0.1.7"
