[package]
name = "wasm-shell"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

# WASM related
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

bustub_instance = { path = "../../crates/bustub_instance", features = ["wasm"] }
execution_common = {path = "../../crates/execution/common"}
