[package]
name = "eviction_policy"
version = "0.1.0"
edition = "2021"

[dependencies]
data_structures = {path = "../../data_structures"}

buffer_common = {path = "../common"}

bit-vec = "0.8.0"
parking_lot = "0.12.3"

# Profiling
tracy-client = { version = "0.17.3", default-features = false}

[dev-dependencies]
rand = "0.8"

[features]
default = []
tracing = ["tracy-client/enable"]
