[package]
name = "eviction_policy"
version = "0.1.0"
edition = "2021"

[dependencies]
data_structures = {workspace = true}

buffer_common = {workspace = true}

bit-vec = {workspace = true}
parking_lot = {workspace = true}

# Profiling
tracy-client = {workspace = true}

[dev-dependencies]
rand = {workspace = true}

[features]
default = []
tracing = ["tracy-client/enable"]
