[package]
name = "buffer_pool_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../../common"}
stats = {path = "../../stats"}
error_utils = {path = "../../error_utils"}

pages = {path = "../../storage/pages"}
disk_storage = {path = "../../storage/disk"}

buffer_common = {path = "../common"}
eviction_policy = {path = "../eviction_policy"}

recovery_log_manager = {path = "../../recovery/log_manager"}

thiserror = "1.0.64"
rand = "0.8"
rand_chacha = "0.3.1"

parking_lot = "0.12.3"
derive_builder = "0.20.0"
num-format = "0.4.4"

# Profiling
tracy-client = { version = "0.17.3", default-features = false}

[dev-dependencies]
derive_builder = "0.20.0"
tempdir = "0.3.7"
zipf = "7"
parking_lot = { version = "0.12.3", features = ["default", "deadlock_detection"] }

[features]
default = []
statistics = []
tracing = ["tracy-client/enable", "eviction_policy/tracing"]
