[package]
name = "buffer_pool_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
stats = { workspace = true }
error_utils = { workspace = true }

pages = { workspace = true }
disk_storage = { workspace = true }

buffer_common = { workspace = true }
eviction_policy = { workspace = true }

recovery_log_manager = { workspace = true }

thiserror = { workspace = true }

parking_lot = { workspace = true }
derive_builder = { workspace = true }

# Profiling
tracy-client = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
derive_builder = { workspace = true }
tempdir ={ workspace = true }
zipf = { workspace = true }
parking_lot = { workspace = true, features = ["default", "deadlock_detection"] }

[features]
default = []
statistics = []
tracing = ["tracy-client/enable", "eviction_policy/tracing"]
