[package]
name = "catalog_schema_mocks"
version = "0.1.0"
edition = "2021"

[dependencies]
generics = {path = "../../utils/generics"}
data_types = {path = "../../data_types"}
error_utils = {path = "../../utils/error_utils"}
catalog_schema = {path = "../schema"}
tuple = {path = "../../storage/table/tuple"}
rid = {path = "../../rid"}

strum = "0.26.3"
strum_macros = "0.26.3"
