[package]
name = "catalog_schema_mocks"
version = "0.1.0"
edition = "2021"

[dependencies]
generics = { workspace = true }
data_types = { workspace = true }
catalog_schema = { workspace = true }
rid = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }

[features]
wasm = ["generics/wasm"]
