[package]
name = "execution_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = { workspace = true }

# Profiling
tracy-client = { workspace = true }

common = { workspace = true }
db_core = { workspace = true }
buffer_pool_manager = { workspace = true }
transaction = { workspace = true }
lock_manager = { workspace = true }
execution_common = { workspace = true }
recovery_log_manager = { workspace = true }
planner = { workspace = true }
catalog_schema = { workspace = true }
catalog_schema_mocks = { workspace = true }
data_types = { workspace = true }

expression = { workspace = true }

error_utils = { workspace = true }
anyhow = { workspace = true }
table = { workspace = true }
tuple = { workspace = true }
rid = { workspace = true }
index = { workspace = true }


[features]
default = []
tracing = ["tracy-client/enable", "buffer_pool_manager/tracing"]
tracing-memory-allocation = ["tracing"]

wasm = ["catalog_schema_mocks/wasm"]
