[package]
name = "extendible_hash_table"
version = "0.1.0"
edition = "2021"

[dependencies]

hashing_common = { workspace = true }

common = { workspace = true }
stats = { workspace = true }
pages = { workspace = true }
disk_storage = { workspace = true }

buffer_common = { workspace = true }
buffer_pool_manager = { workspace = true }

transaction = { workspace = true }

binary_utils = { workspace = true }
generics = { workspace = true }
error_utils = { workspace = true }

thiserror = { workspace = true }

comfy-table = { workspace = true }

parking_lot = { workspace = true }

# Profiling
tracy-client = { workspace = true }


[dev-dependencies]

rand = { workspace = true }
rand_chacha = { workspace = true }
parking_lot = { workspace = true, features = ["default", "deadlock_detection"] }

[features]
default = []
statistics = []
tracing = ["tracy-client/enable", "buffer_pool_manager/tracing"]

wasm = ["generics/wasm"]
