[package]
name = "index"
version = "0.1.0"
edition = "2021"

[dependencies]

buffer_pool_manager = { workspace = true }
catalog_schema = { workspace = true }
common = { workspace = true }
data_types = { workspace = true }
error_utils = { workspace = true }
extendible_hash_table = { workspace = true }
hashing_common = { workspace = true }
rid = { workspace = true }
transaction = { workspace = true }
tuple = { workspace = true }
table = { workspace = true }
