[package]
name = "generics"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_chacha = "0.3.1"

getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
wasm = ["getrandom"]

# This is needed to avoid a build error when building for the wasm32-unknown-unknown target
[package.metadata.cargo-machete]
ignored = ["getrandom"]
