[package]
name = "generics"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }

getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
wasm = ["getrandom"]

# This is needed to avoid a build error when building for the wasm32-unknown-unknown target
[package.metadata.cargo-machete]
ignored = ["getrandom"]
