[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

[dependencies]

common = {path = "../../../common"}
tuple = {path = "../../../storage/table/tuple"}
expression = {path = "../../../execution/expression"}
rid = {path = "../../../rid"}

atomic = "0.6.0"
bytemuck = "1.18.0"

# Make sure to sync this version with the one in the dev-dependencies
parking_lot = "0.12.3"
