[package]
name = "table"
version = "0.1.0"
edition = "2021"

[dependencies]

common = {path = "../../../common"}
pages = {path = "../../pages"}
tuple = {path = "../tuple"}
buffer_common = {path = "../../../buffer/common"}
buffer_pool_manager = {path = "../../../buffer/manager"}
lock_manager = {path = "../../../concurrency/lock_manager"}
transaction = {path = "../../../concurrency/transaction/core"}
rid = {path = "../../../rid"}
data_types = {path = "../../../data_types"}

thiserror = "1.0.64"

parking_lot = "0.12.3"
