[package]
name = "table"
version = "0.1.0"
edition = "2021"

[dependencies]

buffer_common = {path = "../../../buffer/common"}
buffer_pool_manager = {path = "../../../buffer/manager"}
common = {path = "../../../common"}
lock_manager = {path = "../../../concurrency/lock_manager"}
pages = {path = "../../pages"}
parking_lot = "0.12.3"
rid = {path = "../../../rid"}
transaction = {path = "../../../concurrency/transaction/core"}
tuple = {path = "../tuple"}


[features]
lock_manager = []
