[package]
name = "table"
version = "0.1.0"
edition = "2021"

[dependencies]

buffer_common = { workspace = true }
buffer_pool_manager = { workspace = true }
common = { workspace = true }
lock_manager = { workspace = true }
pages = { workspace = true }
parking_lot = { workspace = true }
rid = { workspace = true }
transaction = { workspace = true }
tuple = { workspace = true }
catalog_schema = { workspace = true }
data_types = { workspace = true }

[dev-dependencies]
rand = "0.8.5"


[features]
lock_manager = []
